export enum StatusResult {
  SUCCESS = 'SUCCESS',
  ERROR = 'ERROR'
}
